syntax = "proto3";

package elasticsearchservicepb;

option go_package = "elasticsearchservicepb/";

import "google/protobuf/timestamp.proto";

service ElasticsearchServiceGRPC {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
  rpc GetInvoices (GetInvoicesRequest) returns (GetInvoicesResponse);
}

// user-service

message GetUsersRequest {
    int32 offset = 1;
    int32 limit = 2;
    string sort_by = 3;
    string full_name = 4;
    string email = 5;
    string username = 6;
    string address = 7;
    string role_name = 8;
    string created_at_gte = 9;
    string created_at_lte = 10;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string full_name = 2;
  string email = 3;
  string username = 4;
  string address = 5;
  string role_name = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// catalog-service

message GetProductsRequest {
    int32 offset = 1;
    int32 limit = 2;
    string sort_by = 3;
    string category_id = 4;
    string brand_id = 5;
    string name = 6;
    string description =7;
    string sex = 8;
    string price_gte = 9;
    string price_lte = 10;
    string discount_percentage_gte = 11;
    string discount_percentage_lte = 12;
    string stock_gte = 13;
    string stock_lte = 14;
    string category_name = 15;
    string brand_name = 16;
    string created_at_gte = 17;
    string created_at_lte = 18;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string sex = 4;
  int64 price = 5;
  int32 discount_percentage = 6;
  int32 stock = 7;
  string image_url = 8;
  string category_id = 9;
  string category_name = 10;
  string brand_id = 11;
  string brand_name = 12;   
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

// order-service

message GetInvoicesRequest {
    int32 offset = 1;
    int32 limit = 2;
    string sort_by = 3;
    string user_id = 4;
    string total_amount_gte = 5;
    string total_amount_lte = 6;
    string status = 7;
    string created_at_gte = 8;
    string created_at_lte = 9;
}

message GetInvoicesResponse {
  repeated Invoice invoices = 1;
}

message Invoice {
  string id = 1;
  string user_id = 2;
  int64 total_amount = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
